# crypto-labs

./: .gitignore  pyproject.toml
2/: README.md  main.py  result.json
3/: README.md  client.py  main.py
3/crackers/: base.py  lcg.py  mt.py
3/generators/: mt.py
4/: README.md  config.py  generators.py  hashers.py  io_files.py  main.py
56/: README.md  config.py  injector.py  main.py
56/app/v1/: crypt.py  injector.py
56/app/v1/gateways/: __init__.py  sqlite.py
56/app/v1/models/: __init__.py  user.py
56/v1/: __init__.py  schemas.py
56/v1/routes/: __init__.py  user.py
56/v1/templates/: data.html  login.html  register.html
7/: README.md
8/: final_zero.md  final_zero.py  stack0.md  stack1.md  stack2.md  stack3.md  stack4.md  stack5.md  stack6.md
